--- a/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=243.076039,Y=1662.521798,Z=2446.858538),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=10.551976,Y=1704.541757,Z=2446.858534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=812.709570,Y=1172.206352,Z=2446.983534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
-EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=600.670921,Y=1639.113504,Z=2446.983534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
+EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=1417.373836,Y=898.894257,Z=442.570964),CamRotation=(Pitch=-22.799999,Yaw=-29.400000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
 None=======
 None=======
 None=======
@@ -238,7 +238,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/Characters/Mannequins/Animations/Manny
 ContentBrowserDrawer.SelectedPaths=/Game/TopDown/Input
 ContentBrowserDrawer.SelectedPaths=/Engine/Animation
-ContentBrowserDrawer.SelectedPaths=/Game/Enemies
+ContentBrowserDrawer.SelectedPaths=/Game/MainCharacter
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -714,10 +714,20 @@ StaticMeshComponent.Events=True
 StaticMeshComponent.Materials=True
 PhysicsAssetGenerationSettings.Body Creation=True
 PhysicsAssetGenerationSettings.Constraint Creation=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
@@ -748,37 +758,36 @@ RecentAssetEditors=
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
-OpenAssetsAtExit=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset.PM2_P1_Robot_Character_QRD_01_PhysicsAsset
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
-MRUItem1=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem2=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
-MRUItem3=/Game/VFX/Sparks/NS_Sparks_01
-MRUItem4=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
-MRUItem5=/Game/VFX/Electricity/NS_ReactiveElectricity_01
-MRUItem6=/Game/Enemies/EnemyRobot02
-MRUItem7=/Game/Enemies/EnemyRobot01
-MRUItem8=/Game/Enemies/EnemyRobot02_Skeleton
-MRUItem9=/Game/VFX/Explosion/NS_Explosions01
-MRUItem10=/Game/VFX/Explosion/M_Smoke
-MRUItem11=/Game/VFX/Explosion/SmokeAlpha01
-MRUItem12=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem13=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem14=/Game/TopDown/Input/Actions/IA_Move
-MRUItem15=/Game/TopDown/Input/IMC_Default
-MRUItem16=/Game/TopDown/Blueprints/IA_SetDestination_Click
-MRUItem17=/Game/TopDown/Blueprints/AC_Move
-MRUItem18=/Game/VFX/MuzzleFlash/MuzzlePlanes
-MRUItem19=/Game/VFX/MuzzleFlash/MuzzleCone
-MRUItem20=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
-MRUItem21=/Game/VFX/MuzzleFlash/M_MuzzleFlash
-MRUItem22=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
-MRUItem23=/Game/OfficeAssets/PM2_Office_Cubicles
-MRUItem24=/Game/GunModel/M249_SAW_MODEL
-MRUItem25=/Game/VFX/Electricity/M_Invisible
-MRUItem26=/Game/VFX/Electricity/M_Electricity
+MRUItem0=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01
+MRUItem1=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
+MRUItem2=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem3=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
+MRUItem4=/Game/VFX/Sparks/NS_Sparks_01
+MRUItem5=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
+MRUItem6=/Game/VFX/Electricity/NS_ReactiveElectricity_01
+MRUItem7=/Game/Enemies/EnemyRobot02
+MRUItem8=/Game/Enemies/EnemyRobot01
+MRUItem9=/Game/Enemies/EnemyRobot02_Skeleton
+MRUItem10=/Game/VFX/Explosion/NS_Explosions01
+MRUItem11=/Game/VFX/Explosion/M_Smoke
+MRUItem12=/Game/VFX/Explosion/SmokeAlpha01
+MRUItem13=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem14=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem15=/Game/TopDown/Input/Actions/IA_Move
+MRUItem16=/Game/TopDown/Input/IMC_Default
+MRUItem17=/Game/TopDown/Blueprints/IA_SetDestination_Click
+MRUItem18=/Game/TopDown/Blueprints/AC_Move
+MRUItem19=/Game/VFX/MuzzleFlash/MuzzlePlanes
+MRUItem20=/Game/VFX/MuzzleFlash/MuzzleCone
+MRUItem21=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
+MRUItem22=/Game/VFX/MuzzleFlash/M_MuzzleFlash
+MRUItem23=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
+MRUItem24=/Game/OfficeAssets/PM2_Office_Cubicles
+MRUItem25=/Game/GunModel/M249_SAW_MODEL
+MRUItem26=/Game/VFX/Electricity/M_Invisible
+MRUItem27=/Game/VFX/Electricity/M_Electricity
 
 [NiagaraRecent_EmittersAndSystems]
 MRUItem0=/Game/VFX/Sparks/NS_Sparks_01
@@ -820,6 +829,7 @@ MRUItem5=/Niagara/DefaultAssets/Templates/Emitters/DirectionalBurst
 /Game/MainCharacter/Player_Character/PC_Animations/Walking.Walking=1
 /Game/MainCharacter/PM2_P1_Robot_Character_Mesh01.PM2_P1_Robot_Character_Mesh01=1
 /Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset.PM2_P1_Robot_Character_QRD_01_PhysicsAsset=1
+/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01.PM2_P1_Robot_Character_QRD_01=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
