--- a/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=243.076039,Y=1662.521798,Z=2446.858538),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=10.551976,Y=1704.541757,Z=2446.858534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=812.709570,Y=1172.206352,Z=2446.983534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
-EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=1206.023813,Y=1601.019247,Z=749.718771),CamRotation=(Pitch=-40.799999,Yaw=-6.600000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
+EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=-53.186789,Y=1757.169095,Z=2446.858549),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
 None=======
 None=======
 None=======
@@ -238,7 +238,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/Characters/Mannequins/Animations/Manny
 ContentBrowserDrawer.SelectedPaths=/Game/TopDown/Input
 ContentBrowserDrawer.SelectedPaths=/Engine/Animation
-ContentBrowserDrawer.SelectedPaths=/Game/MainCharacter
+ContentBrowserDrawer.SelectedPaths=/Game/Enemies
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -723,10 +723,140 @@ PlayerStart.Physics=True
 PlayerStart.Networking=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+BP_ENEMYROBOT_C.Tick=True
+BP_ENEMYROBOT_C.Replication=True
+BP_ENEMYROBOT_C.Rendering=True
+BP_ENEMYROBOT_C.Collision=True
+BP_ENEMYROBOT_C.Actor=True
+BP_ENEMYROBOT_C.Input=True
+BP_ENEMYROBOT_C.HLOD=True
+BP_ENEMYROBOT_C.Physics=True
+BP_ENEMYROBOT_C.Events=True
+BP_ENEMYROBOT_C.TransformCommon=True
+BP_ENEMYROBOT_C.Networking=True
+AnimationThumbnailSkeletalMeshActor.TransformCommon=True
+AnimationThumbnailSkeletalMeshActor.Animation=True
+AnimationThumbnailSkeletalMeshActor.Mesh=True
+AnimationThumbnailSkeletalMeshActor.Physics=True
+AnimationThumbnailSkeletalMeshActor.Collision=True
+AnimationThumbnailSkeletalMeshActor.Clothing=True
+AnimationThumbnailSkeletalMeshActor.LeaderPoseComponent=True
+AnimationThumbnailSkeletalMeshActor.Lighting=True
+AnimationThumbnailSkeletalMeshActor.AnimationRig=True
+AnimationThumbnailSkeletalMeshActor.Deformer=True
+AnimationThumbnailSkeletalMeshActor.SkinWeights=True
+AnimationThumbnailSkeletalMeshActor.Rendering=True
+AnimationThumbnailSkeletalMeshActor.HLOD=True
+AnimationThumbnailSkeletalMeshActor.Navigation=True
+AnimationThumbnailSkeletalMeshActor.VirtualTexture=True
+AnimationThumbnailSkeletalMeshActor.Tags=True
+AnimationThumbnailSkeletalMeshActor.Activation=True
+AnimationThumbnailSkeletalMeshActor.Cooking=True
+AnimationThumbnailSkeletalMeshActor.Replication=True
+AnimationThumbnailSkeletalMeshActor.Networking=True
+AnimationThumbnailSkeletalMeshActor.Input=True
+AnimationThumbnailSkeletalMeshActor.Actor=True
+AnimationThumbnailSkeletalMeshActor.Materials=True
+AnimationThumbnailSkeletalMeshActor.SkeletalMesh=True
+BP_EnemyAI_C.TransformCommon=True
+BP_EnemyAI_C.Animation=True
+BP_EnemyAI_C.Mesh=True
+BP_EnemyAI_C.Tick=True
+BP_EnemyAI_C.ComponentTick=True
+BP_EnemyAI_C.Clothing=True
+BP_EnemyAI_C.LeaderPoseComponent=True
+BP_EnemyAI_C.Physics=True
+BP_EnemyAI_C.Collision=True
+BP_EnemyAI_C.Lighting=True
+BP_EnemyAI_C.AnimationRig=True
+BP_EnemyAI_C.Deformer=True
+BP_EnemyAI_C.SkinWeights=True
+BP_EnemyAI_C.HLOD=True
+BP_EnemyAI_C.Rendering=True
+BP_EnemyAI_C.Mobile=True
+BP_EnemyAI_C.Navigation=True
+BP_EnemyAI_C.RayTracing=True
+BP_EnemyAI_C.VirtualTexture=True
+BP_EnemyAI_C.Tags=True
+BP_EnemyAI_C.AssetUserData=True
+BP_EnemyAI_C.Replication=True
+BP_EnemyAI_C.ComponentReplication=True
+BP_EnemyAI_C.Activation=True
+BP_EnemyAI_C.Variable=True
+BP_EnemyAI_C.Cooking=True
+BP_EnemyAI_C.Character Movement (General Settings)=True
+BP_EnemyAI_C.Character Movement: Walking=True
+BP_EnemyAI_C.Character Movement: Jumping / Falling=True
+BP_EnemyAI_C.Character Movement: Gravity=True
+BP_EnemyAI_C.Character Movement (Networking)=True
+BP_EnemyAI_C.Character Movement: Swimming=True
+BP_EnemyAI_C.Character Movement: Flying=True
+BP_EnemyAI_C.Character Movement: Custom Movement=True
+BP_EnemyAI_C.Character Movement (Rotation Settings)=True
+BP_EnemyAI_C.Character Movement: Physics Interaction=True
+BP_EnemyAI_C.Character Movement=True
+BP_EnemyAI_C.Character Movement: Avoidance=True
+BP_EnemyAI_C.RootMotion=True
+BP_EnemyAI_C.Character Movement: NavMesh Movement=True
+BP_EnemyAI_C.NavMovement=True
+BP_EnemyAI_C.Velocity=True
+BP_EnemyAI_C.PlanarMovement=True
+BP_EnemyAI_C.MovementComponent=True
+BP_EnemyAI_C.Shape=True
+BP_EnemyAI_C.Character=True
+BP_EnemyAI_C.Camera=True
+BP_EnemyAI_C.Pawn=True
+BP_EnemyAI_C.Actor=True
+BP_EnemyAI_C.Input=True
+BP_EnemyAI_C.Events=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentTick=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.HLOD=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.Networking=True
+NavMeshBoundsVolume.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+BP_ENEMYROBOT_C.LevelInstance=True
+BP_ENEMYROBOT_C.Cooking=True
+BP_ENEMYROBOT_C.WorldPartition=True
+BP_ENEMYROBOT_C.DataLayers=True
+SceneComponent.LOD=True
+BP_EnemyAI_C.Materials=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+BP_EnemyAI_C.Networking=True
+PropertyWrapper.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=BlueprintEditor
@@ -754,40 +884,43 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
 None=======
 None=======
 None=======
+OpenAssetsAtExit=/Game/Enemies/BP_EnemyAI.BP_EnemyAI
+OpenAssetsAtExit=/Game/Enemies/BP_ENEMYROBOT.BP_ENEMYROBOT
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01
-MRUItem1=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
-MRUItem2=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem3=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
-MRUItem4=/Game/VFX/Sparks/NS_Sparks_01
-MRUItem5=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
-MRUItem6=/Game/VFX/Electricity/NS_ReactiveElectricity_01
-MRUItem7=/Game/Enemies/EnemyRobot02
-MRUItem8=/Game/Enemies/EnemyRobot01
-MRUItem9=/Game/Enemies/EnemyRobot02_Skeleton
-MRUItem10=/Game/VFX/Explosion/NS_Explosions01
-MRUItem11=/Game/VFX/Explosion/M_Smoke
-MRUItem12=/Game/VFX/Explosion/SmokeAlpha01
-MRUItem13=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem14=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem15=/Game/TopDown/Input/Actions/IA_Move
-MRUItem16=/Game/TopDown/Input/IMC_Default
-MRUItem17=/Game/TopDown/Blueprints/IA_SetDestination_Click
-MRUItem18=/Game/TopDown/Blueprints/AC_Move
-MRUItem19=/Game/VFX/MuzzleFlash/MuzzlePlanes
-MRUItem20=/Game/VFX/MuzzleFlash/MuzzleCone
-MRUItem21=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
-MRUItem22=/Game/VFX/MuzzleFlash/M_MuzzleFlash
-MRUItem23=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
-MRUItem24=/Game/OfficeAssets/PM2_Office_Cubicles
-MRUItem25=/Game/GunModel/M249_SAW_MODEL
-MRUItem26=/Game/VFX/Electricity/M_Invisible
-MRUItem27=/Game/VFX/Electricity/M_Electricity
+MRUItem0=/Game/Enemies/BP_EnemyAI
+MRUItem1=/Game/Enemies/BP_ENEMYROBOT
+MRUItem2=/Game/Enemies/EnemyRobot01
+MRUItem3=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01
+MRUItem4=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
+MRUItem5=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem6=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
+MRUItem7=/Game/VFX/Sparks/NS_Sparks_01
+MRUItem8=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
+MRUItem9=/Game/VFX/Electricity/NS_ReactiveElectricity_01
+MRUItem10=/Game/Enemies/EnemyRobot02
+MRUItem11=/Game/Enemies/EnemyRobot02_Skeleton
+MRUItem12=/Game/VFX/Explosion/NS_Explosions01
+MRUItem13=/Game/VFX/Explosion/M_Smoke
+MRUItem14=/Game/VFX/Explosion/SmokeAlpha01
+MRUItem15=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem16=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem17=/Game/TopDown/Input/Actions/IA_Move
+MRUItem18=/Game/TopDown/Input/IMC_Default
+MRUItem19=/Game/TopDown/Blueprints/IA_SetDestination_Click
+MRUItem20=/Game/TopDown/Blueprints/AC_Move
+MRUItem21=/Game/VFX/MuzzleFlash/MuzzlePlanes
+MRUItem22=/Game/VFX/MuzzleFlash/MuzzleCone
+MRUItem23=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
+MRUItem24=/Game/VFX/MuzzleFlash/M_MuzzleFlash
+MRUItem25=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
+MRUItem26=/Game/OfficeAssets/PM2_Office_Cubicles
+MRUItem27=/Game/GunModel/M249_SAW_MODEL
+MRUItem28=/Game/VFX/Electricity/M_Invisible
+MRUItem29=/Game/VFX/Electricity/M_Electricity
 
 [NiagaraRecent_EmittersAndSystems]
 MRUItem0=/Game/VFX/Sparks/NS_Sparks_01
@@ -830,6 +963,8 @@ MRUItem5=/Niagara/DefaultAssets/Templates/Emitters/DirectionalBurst
 /Game/MainCharacter/PM2_P1_Robot_Character_Mesh01.PM2_P1_Robot_Character_Mesh01=1
 /Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset.PM2_P1_Robot_Character_QRD_01_PhysicsAsset=1
 /Game/MainCharacter/PM2_P1_Robot_Character_QRD_01.PM2_P1_Robot_Character_QRD_01=1
+/Game/Enemies/BP_EnemyAI.BP_EnemyAI=0
+/Game/Enemies/BP_ENEMYROBOT.BP_ENEMYROBOT=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -851,8 +986,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -1061,7 +1196,7 @@ bMaterialQualityUsed[3]=0
 MaterialStatsDerivedMIOption=Ignore
 
 [RootWindow]
-ScreenPosition=X=-2251.000 Y=291.000
+ScreenPosition=X=624.000 Y=368.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2422,6 +2557,9 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/Control
 RecentsFiles=C:/UnrealStuff/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Game/Enemies/BP_EnemyAI.BP_EnemyAI;
+RecentlyPlaced=/Game/Enemies/BP_ENEMYROBOT.BP_ENEMYROBOT;
 RecentlyPlaced=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01.PM2_P1_Robot_Character_Mesh01;
 RecentlyPlaced=/Game/VFX/Explosion/NS_Explosions01.NS_Explosions01;
 RecentlyPlaced=/Game/VFX/Explosion/SmokeAlpha01.SmokeAlpha01;
@@ -2573,6 +2711,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+BP_ENEMYROBOT_C="\"Object.Replication.ReplicatedMovement\" "
 
 [DetailCategoriesAdvanced]
 Brush.Geometry=True
@@ -2581,6 +2720,8 @@ Brush.BrushSettings=True
 SkeletalMeshComponent.Animation=True
 SkeletalMeshComponent.Collision=True
 None=======
+SkeletalMeshActor.Actor=False
+BP_ENEMYROBOT_C.LevelInstance=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
