--- a/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,7 +162,7 @@ MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=243.076039,Y=1662.521798,Z=2446.858538),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=10.551976,Y=1704.541757,Z=2446.858534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=812.709570,Y=1172.206352,Z=2446.983534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
-EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=96.814837,Y=-235.228331,Z=887.731483),CamRotation=(Pitch=-15.599900,Yaw=-265.400004,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))),("/Game/MainLevel/TheOfficeRW.TheOfficeRW", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=1301.729921,Y=-911.414329,Z=2460.500506),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031)))))
+EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=96.814837,Y=-235.228331,Z=887.731483),CamRotation=(Pitch=-15.599900,Yaw=-265.400004,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))),("/Game/MainLevel/TheOfficeRW.TheOfficeRW", (LevelViewportsInfo=((CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=2441.387296,Y=1756.374370,Z=1786.570803),CamRotation=(Pitch=-58.799900,Yaw=-1611.400024,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617)))))
 None=======
 None=======
 None=======
@@ -300,22 +300,25 @@ NiagaraAssetBrowser.AddEmitter.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Props
+ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping
+ContentBrowserTab1.JumpMRU=/All/Game/GunModel
+ContentBrowserTab1.JumpMRU=/All/Game/Enemies
+ContentBrowserTab1.JumpMRU=/All/Game/Cursor
+ContentBrowserTab1.JumpMRU=/All/Game/StarterContent
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Particles
+ContentBrowserTab1.JumpMRU=/All/Game/Characters
+ContentBrowserTab1.JumpMRU=/All/Game/MainCharacter
+ContentBrowserTab1.JumpMRU=/All/Game/OfficeAssets
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/HDRI
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Materials
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Blueprints
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Audio
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
-ContentBrowserTab1.JumpMRU=/All/Game/StarterContent
 ContentBrowserTab1.JumpMRU=/All/Game/TopDown
-ContentBrowserTab1.JumpMRU=/All/Game/OfficeAssets
 ContentBrowserTab1.JumpMRU=/All/Game/MainLevel
 ContentBrowserTab1.JumpMRU=/All/Game/MainCharacter/Player_Character/PC_Animations
-ContentBrowserTab1.JumpMRU=/All/Game/MainCharacter
-ContentBrowserTab1.JumpMRU=/All/Game/Enemies
 ContentBrowserTab1.JumpMRU=/All/Game/VFX/MuzzleFlash
-ContentBrowserTab1.JumpMRU=/All/Game/GunModel
 ContentBrowserTab1.IsLocked=False
 ContentBrowserTab1.VerticalSplitter.FixedSlotSize0=150
 ContentBrowserTab1.ZoomScale=0
@@ -806,6 +809,8 @@ Emitter.Actor=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
@@ -838,33 +843,35 @@ None=======
 None=======
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
-MRUItem1=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem2=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
-MRUItem3=/Game/VFX/Sparks/NS_Sparks_01
-MRUItem4=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
-MRUItem5=/Game/VFX/Electricity/NS_ReactiveElectricity_01
-MRUItem6=/Game/Enemies/EnemyRobot02
-MRUItem7=/Game/Enemies/EnemyRobot01
-MRUItem8=/Game/Enemies/EnemyRobot02_Skeleton
-MRUItem9=/Game/VFX/Explosion/NS_Explosions01
-MRUItem10=/Game/VFX/Explosion/M_Smoke
-MRUItem11=/Game/VFX/Explosion/SmokeAlpha01
-MRUItem12=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem13=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem14=/Game/TopDown/Input/Actions/IA_Move
-MRUItem15=/Game/TopDown/Input/IMC_Default
-MRUItem16=/Game/TopDown/Blueprints/IA_SetDestination_Click
-MRUItem17=/Game/TopDown/Blueprints/AC_Move
-MRUItem18=/Game/VFX/MuzzleFlash/MuzzlePlanes
-MRUItem19=/Game/VFX/MuzzleFlash/MuzzleCone
-MRUItem20=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
-MRUItem21=/Game/VFX/MuzzleFlash/M_MuzzleFlash
-MRUItem22=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
-MRUItem23=/Game/OfficeAssets/PM2_Office_Cubicles
-MRUItem24=/Game/GunModel/M249_SAW_MODEL
-MRUItem25=/Game/VFX/Electricity/M_Invisible
-MRUItem26=/Game/VFX/Electricity/M_Electricity
+MRUItem0=/Game/OfficeAssets/SM_Frontdesk
+MRUItem1=/Game/OfficeAssets/SM_OutsideFence
+MRUItem2=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
+MRUItem3=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem4=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
+MRUItem5=/Game/VFX/Sparks/NS_Sparks_01
+MRUItem6=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
+MRUItem7=/Game/VFX/Electricity/NS_ReactiveElectricity_01
+MRUItem8=/Game/Enemies/EnemyRobot02
+MRUItem9=/Game/Enemies/EnemyRobot01
+MRUItem10=/Game/Enemies/EnemyRobot02_Skeleton
+MRUItem11=/Game/VFX/Explosion/NS_Explosions01
+MRUItem12=/Game/VFX/Explosion/M_Smoke
+MRUItem13=/Game/VFX/Explosion/SmokeAlpha01
+MRUItem14=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem15=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem16=/Game/TopDown/Input/Actions/IA_Move
+MRUItem17=/Game/TopDown/Input/IMC_Default
+MRUItem18=/Game/TopDown/Blueprints/IA_SetDestination_Click
+MRUItem19=/Game/TopDown/Blueprints/AC_Move
+MRUItem20=/Game/VFX/MuzzleFlash/MuzzlePlanes
+MRUItem21=/Game/VFX/MuzzleFlash/MuzzleCone
+MRUItem22=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
+MRUItem23=/Game/VFX/MuzzleFlash/M_MuzzleFlash
+MRUItem24=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
+MRUItem25=/Game/OfficeAssets/PM2_Office_Cubicles
+MRUItem26=/Game/GunModel/M249_SAW_MODEL
+MRUItem27=/Game/VFX/Electricity/M_Invisible
+MRUItem28=/Game/VFX/Electricity/M_Electricity
 
 [NiagaraRecent_EmittersAndSystems]
 MRUItem0=/Game/VFX/Sparks/NS_Sparks_01
@@ -906,6 +913,8 @@ MRUItem5=/Niagara/DefaultAssets/Templates/Emitters/DirectionalBurst
 /Game/MainCharacter/Player_Character/PC_Animations/Walking.Walking=1
 /Game/MainCharacter/PM2_P1_Robot_Character_Mesh01.PM2_P1_Robot_Character_Mesh01=1
 /Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset.PM2_P1_Robot_Character_QRD_01_PhysicsAsset=1
+/Game/OfficeAssets/SM_OutsideFence.SM_OutsideFence=1
+/Game/OfficeAssets/SM_Frontdesk.SM_Frontdesk=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2499,8 +2508,12 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/Control
 RecentsFiles=C:/UnrealStuff/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
-RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
+RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Couch.SM_Couch;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Statue.SM_Statue;
 RecentlyPlaced=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01.PM2_P1_Robot_Character_Mesh01;
 RecentlyPlaced=/Game/VFX/Explosion/NS_Explosions01.NS_Explosions01;
@@ -2515,10 +2528,6 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01.NS_MuzzleFlash_01;
 RecentlyPlaced=/Game/OfficeAssets/PM2_Office_Kitchen_Cabinet.PM2_Office_Kitchen_Cabinet;
 RecentlyPlaced=/Game/OfficeAssets/PM2_Office_Cubicles.PM2_Office_Cubicles;
-RecentlyPlaced=/Game/GunModel/M249_SAW_MODEL.M249_SAW_MODEL;
-RecentlyPlaced=/Game/VFX/Electricity/NS_ReactiveElectricity.NS_ReactiveElectricity;
-RecentlyPlaced=/Game/VFX/Electricity/NS_Electricity_01.NS_Electricity_01;
-RecentlyPlaced=/Game/VFX/Sparks/NS_Sparks_01.NS_Sparks_01;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2653,6 +2662,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[3]\" "
 
 [DetailCategoriesAdvanced]
 Brush.Geometry=True
