--- a/Content/Project_01/Config/DefaultEngine.ini
+++ b/Content/Project_01/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=MyProject4
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+EditorStartupMap=/Game/MainLevel/TheOfficeRW.TheOfficeRW
+GameDefaultMap=/Game/MainLevel/TheOfficeRW.TheOfficeRW
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
