--- a/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Content/Project_01/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=243.076039,Y=1662.521798,Z=2446.858538),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=10.551976,Y=1704.541757,Z=2446.858534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=812.709570,Y=1172.206352,Z=2446.983534),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))))
-EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=-53.186789,Y=1757.169095,Z=2446.858549),CamRotation=(Pitch=-57.200000,Yaw=5.400000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))),("/Game/MainLevel/TheOfficeRW.TheOfficeRW", (LevelViewportsInfo=((CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=842.955858,Y=-293.401174,Z=2646.417894),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617,CamUpdated=True)))))
+EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=608.447677,Y=1628.996457,Z=1885.507597),CamOrthoZoom=37626.832031),(CamPosition=(X=-53.186789,Y=1757.169095,Z=2446.858549),CamRotation=(Pitch=-57.200000,Yaw=5.400000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-1215.381030,Y=18.714798,Z=285.168951)),(CamPosition=(X=-2402.919325,Y=319.699269,Z=2178.456833),CamRotation=(Pitch=-37.042047,Yaw=-15.764466,Roll=0.000009)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/MainLevel/TheOffice.TheOffice", (LevelViewportsInfo=((CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059),(CamPosition=(X=802.137337,Y=993.326187,Z=831.363816),CamRotation=(Pitch=-26.599900,Yaw=-3500.200052,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=2472.410929,Y=-1825.000474,Z=131.582509),CamOrthoZoom=4897.060059)))),("/Game/MainLevel/TheOfficeRW.TheOfficeRW", (LevelViewportsInfo=((CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617),(CamPosition=(X=2016.219361,Y=767.676486,Z=2646.796034),CamRotation=(Pitch=-70.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=3472.112568,Y=1238.875888,Z=400.000095),CamOrthoZoom=8539.682617,CamUpdated=True)))))
 None=======
 None=======
 None=======
@@ -210,6 +210,7 @@ None=======
 AssetViewerSettings=AssetViewerSettings.Settings.Environment
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Environment
 PreviewMeshCollection=
+SkeletalMeshComponent=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=
@@ -239,7 +240,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/Characters/Mannequins/Animations/Manny
 ContentBrowserDrawer.SelectedPaths=/Game/TopDown/Input
 ContentBrowserDrawer.SelectedPaths=/Engine/Animation
-ContentBrowserDrawer.SelectedPaths=/Game/MainLevel
+ContentBrowserDrawer.SelectedPaths=/Game/Enemies
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -247,8 +248,10 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/MainLevel
 ContentBrowserDrawer.JumpMRU=/All/Game/Enemies
+ContentBrowserDrawer.JumpMRU=/All/Game/Audio
+ContentBrowserDrawer.JumpMRU=/All/Game/Audio/Music
+ContentBrowserDrawer.JumpMRU=/All/Game/MainLevel
 ContentBrowserDrawer.JumpMRU=/All/Game/GunModel
 ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserDrawer.JumpMRU=/All/Game/StarterContent
@@ -261,7 +264,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/MainCharacter/Player_Character
 ContentBrowserDrawer.JumpMRU=/All/Game/MainCharacter/Player_Character/PC_Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters
 ContentBrowserDrawer.JumpMRU=/All/Game/Cursor
-ContentBrowserDrawer.JumpMRU=/All/Game/Audio
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequin_UE4/Animations
@@ -275,7 +277,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins/Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input/Actions
-ContentBrowserDrawer.JumpMRU=/All/Game/Audio/Music
 ContentBrowserDrawer.JumpMRU=/All/Game/VFX/Sparks
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -812,7 +813,7 @@ BP_EnemyAI_C.Input=True
 BP_EnemyAI_C.Events=True
 PawnSensingComponent.Variable=True
 PawnSensingComponent.Sockets=True
-PawnSensingComponent.AI=True
+PawnSensingComponent.AI=False
 PawnSensingComponent.Tags=True
 PawnSensingComponent.ComponentTick=True
 PawnSensingComponent.ComponentReplication=True
@@ -1186,12 +1187,107 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Attachment=True
+Emitter.LOD=True
+Emitter.Lighting=True
+Emitter.HLOD=True
+Emitter.Rendering=True
+Emitter.Navigation=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Physics=True
+Emitter.Networking=True
+Emitter.Actor=True
+Emitter.Materials=True
+SoundWave.Format=True
+SoundWave.Sound=True
+SoundWave.Analysis=True
+SoundWave.Subtitles=True
+SoundWave.Loading=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+BP_EnemyAI_C.Default=True
+K2Node_CallFunction.Graph=True
+BP_EnemyAI2_C.TransformCommon=True
+BP_EnemyAI2_C.Animation=True
+BP_EnemyAI2_C.Mesh=True
+BP_EnemyAI2_C.Tick=True
+BP_EnemyAI2_C.Default=True
+BP_EnemyAI2_C.ComponentTick=True
+BP_EnemyAI2_C.Clothing=True
+BP_EnemyAI2_C.Physics=True
+BP_EnemyAI2_C.Collision=True
+BP_EnemyAI2_C.LeaderPoseComponent=True
+BP_EnemyAI2_C.Lighting=True
+BP_EnemyAI2_C.AnimationRig=True
+BP_EnemyAI2_C.Deformer=True
+BP_EnemyAI2_C.SkinWeights=True
+BP_EnemyAI2_C.Rendering=True
+BP_EnemyAI2_C.HLOD=True
+BP_EnemyAI2_C.Mobile=True
+BP_EnemyAI2_C.Navigation=True
+BP_EnemyAI2_C.RayTracing=True
+BP_EnemyAI2_C.VirtualTexture=True
+BP_EnemyAI2_C.Tags=True
+BP_EnemyAI2_C.AssetUserData=True
+BP_EnemyAI2_C.Replication=True
+BP_EnemyAI2_C.ComponentReplication=True
+BP_EnemyAI2_C.Activation=True
+BP_EnemyAI2_C.Variable=True
+BP_EnemyAI2_C.Cooking=True
+BP_EnemyAI2_C.Character Movement (General Settings)=True
+BP_EnemyAI2_C.Character Movement: Walking=True
+BP_EnemyAI2_C.Character Movement: Jumping / Falling=True
+BP_EnemyAI2_C.Character Movement: Gravity=True
+BP_EnemyAI2_C.Character Movement (Networking)=True
+BP_EnemyAI2_C.Character Movement: Swimming=True
+BP_EnemyAI2_C.Character Movement: Flying=True
+BP_EnemyAI2_C.Character Movement: Custom Movement=True
+BP_EnemyAI2_C.Character Movement (Rotation Settings)=True
+BP_EnemyAI2_C.Character Movement: Physics Interaction=True
+BP_EnemyAI2_C.Character Movement=True
+BP_EnemyAI2_C.Character Movement: Avoidance=True
+BP_EnemyAI2_C.RootMotion=True
+BP_EnemyAI2_C.Character Movement: NavMesh Movement=True
+BP_EnemyAI2_C.NavMovement=True
+BP_EnemyAI2_C.Velocity=True
+BP_EnemyAI2_C.PlanarMovement=True
+BP_EnemyAI2_C.MovementComponent=True
+BP_EnemyAI2_C.Shape=True
+BP_EnemyAI2_C.Character=True
+BP_EnemyAI2_C.Camera=True
+BP_EnemyAI2_C.Pawn=True
+BP_EnemyAI2_C.Actor=True
+BP_EnemyAI2_C.Input=True
+BP_EnemyAI2_C.Events=True
+BP_EnemyAI2_C.Materials=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.LOD=True
+SkeletalMeshComponent.MaterialParameters=True
+SkeletalMeshComponent.TextureStreaming=True
+SkeletalMeshComponent.Mobile=True
+SkeletalMeshComponent.RayTracing=True
+SkeletalMeshComponent.AssetUserData=True
+SkeletalMeshComponent.Replication=True
+BP_EnemyAI2_C.Networking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletalMeshEditor
@@ -1219,42 +1315,43 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
+OpenAssetsAtExit=/Game/Enemies/BP_EnemyAI.BP_EnemyAI
+OpenAssetsAtExit=/Game/Enemies/BP_EnemyAI2.BP_EnemyAI2
 None=======
 None=======
 None=======
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MainLevel/TheOfficeRW
+MRUItem0=/Game/Enemies/BP_EnemyAI2
 MRUItem1=/Game/Enemies/BP_EnemyAI
-MRUItem2=/Game/Enemies/BP_ENEMYROBOT
-MRUItem3=/Game/Enemies/EnemyRobot01
-MRUItem4=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01
-MRUItem5=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
-MRUItem6=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem7=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
-MRUItem8=/Game/VFX/Sparks/NS_Sparks_01
-MRUItem9=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
-MRUItem10=/Game/VFX/Electricity/NS_ReactiveElectricity_01
-MRUItem11=/Game/Enemies/EnemyRobot02
-MRUItem12=/Game/Enemies/EnemyRobot02_Skeleton
-MRUItem13=/Game/VFX/Explosion/NS_Explosions01
-MRUItem14=/Game/VFX/Explosion/M_Smoke
-MRUItem15=/Game/VFX/Explosion/SmokeAlpha01
-MRUItem16=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem17=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem18=/Game/TopDown/Input/Actions/IA_Move
-MRUItem19=/Game/TopDown/Input/IMC_Default
-MRUItem20=/Game/TopDown/Blueprints/IA_SetDestination_Click
-MRUItem21=/Game/TopDown/Blueprints/AC_Move
-MRUItem22=/Game/VFX/MuzzleFlash/MuzzlePlanes
-MRUItem23=/Game/VFX/MuzzleFlash/MuzzleCone
-MRUItem24=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
-MRUItem25=/Game/VFX/MuzzleFlash/M_MuzzleFlash
-MRUItem26=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
-MRUItem27=/Game/OfficeAssets/PM2_Office_Cubicles
-MRUItem28=/Game/GunModel/M249_SAW_MODEL
-MRUItem29=/Game/VFX/Electricity/M_Invisible
+MRUItem2=/Game/MainLevel/TheOfficeRW
+MRUItem3=/Game/Enemies/BP_ENEMYROBOT
+MRUItem4=/Game/Enemies/EnemyRobot01
+MRUItem5=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01
+MRUItem6=/Game/MainCharacter/PM2_P1_Robot_Character_QRD_01_PhysicsAsset
+MRUItem7=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem8=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01
+MRUItem9=/Game/VFX/Sparks/NS_Sparks_01
+MRUItem10=/Game/VFX/MuzzleFlash/NS_MuzzleFlash_01
+MRUItem11=/Game/VFX/Electricity/NS_ReactiveElectricity_01
+MRUItem12=/Game/Enemies/EnemyRobot02
+MRUItem13=/Game/Enemies/EnemyRobot02_Skeleton
+MRUItem14=/Game/VFX/Explosion/NS_Explosions01
+MRUItem15=/Game/VFX/Explosion/M_Smoke
+MRUItem16=/Game/VFX/Explosion/SmokeAlpha01
+MRUItem17=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem18=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem19=/Game/TopDown/Input/Actions/IA_Move
+MRUItem20=/Game/TopDown/Input/IMC_Default
+MRUItem21=/Game/TopDown/Blueprints/IA_SetDestination_Click
+MRUItem22=/Game/TopDown/Blueprints/AC_Move
+MRUItem23=/Game/VFX/MuzzleFlash/MuzzlePlanes
+MRUItem24=/Game/VFX/MuzzleFlash/MuzzleCone
+MRUItem25=/Game/VFX/MuzzleFlash/M_MuzzleFlash_Inst
+MRUItem26=/Game/VFX/MuzzleFlash/M_MuzzleFlash
+MRUItem27=/Game/OfficeAssets/PM2_Office_Kitchen_Counter
+MRUItem28=/Game/OfficeAssets/PM2_Office_Cubicles
+MRUItem29=/Game/GunModel/M249_SAW_MODEL
 
 [NiagaraRecent_EmittersAndSystems]
 MRUItem0=/Game/VFX/Sparks/NS_Sparks_01
@@ -1299,6 +1396,8 @@ MRUItem5=/Niagara/DefaultAssets/Templates/Emitters/DirectionalBurst
 /Game/MainCharacter/PM2_P1_Robot_Character_QRD_01.PM2_P1_Robot_Character_QRD_01=1
 /Game/Enemies/BP_EnemyAI.BP_EnemyAI=0
 /Game/Enemies/BP_ENEMYROBOT.BP_ENEMYROBOT=0
+/Game/Audio/Music/battle_theme__temp_.battle_theme__temp_=1
+/Game/Enemies/BP_EnemyAI2.BP_EnemyAI2=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1320,8 +1419,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2893,15 +2992,16 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.4/Engine/Plugins/Animation/Control
 RecentsFiles=C:/UnrealStuff/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Enemies/BP_EnemyAI.BP_EnemyAI;
+RecentlyPlaced=/Game/Enemies/BP_EnemyAI2.BP_EnemyAI2;
+RecentlyPlaced=/Game/Enemies/EnemyRobot02.EnemyRobot02;
 RecentlyPlaced=/Game/Enemies/BP_ENEMYROBOT.BP_ENEMYROBOT;
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/MainCharacter/PM2_P1_Robot_Character_Mesh01.PM2_P1_Robot_Character_Mesh01;
 RecentlyPlaced=/Game/VFX/Explosion/NS_Explosions01.NS_Explosions01;
 RecentlyPlaced=/Game/VFX/Explosion/SmokeAlpha01.SmokeAlpha01;
 RecentlyPlaced=/Game/Enemies/EnemyRobot01.EnemyRobot01;
 RecentlyPlaced=/Game/Enemies/EnemyRobot02_Skeleton.EnemyRobot02_Skeleton;
-RecentlyPlaced=/Game/Enemies/EnemyRobot02.EnemyRobot02;
 RecentlyPlaced=/Game/OfficeAssets/SM_Smalltable.SM_Smalltable;
 RecentlyPlaced=/Game/OfficeAssets/PM2_Office_Kitchen_Counter.PM2_Office_Kitchen_Counter;
 RecentlyPlaced=/Game/OfficeAssets/PM2_Office_Refridgerator.PM2_Office_Refridgerator;
@@ -2912,7 +3012,6 @@ RecentlyPlaced=/Game/OfficeAssets/PM2_Office_Cubicles.PM2_Office_Cubicles;
 RecentlyPlaced=/Game/GunModel/M249_SAW_MODEL.M249_SAW_MODEL;
 RecentlyPlaced=/Game/VFX/Electricity/NS_ReactiveElectricity.NS_ReactiveElectricity;
 RecentlyPlaced=/Game/VFX/Electricity/NS_Electricity_01.NS_Electricity_01;
-RecentlyPlaced=/Game/VFX/Sparks/NS_Sparks_01.NS_Sparks_01;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3047,7 +3146,13 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-BP_ENEMYROBOT_C="\"Object.Replication.ReplicatedMovement\" "
+BP_ENEMYROBOT_C=
+SkeletalMeshComponent=
+SkinnedMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 
 [DetailCategoriesAdvanced]
 Brush.Geometry=True
