--- a/Content/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Content/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -573,7 +573,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Chase/Desktop/C++ Tutorials/Project2/Content
+UNR=../../../../../../Bedlam/Project-1/Content/Content
 BRUSH=../../../../../../Users/Chase/Desktop/C++ Tutorials/Project2/Content/
 FBX=../../../../../../Users/Chase/Desktop/C++ Tutorials/Project2/Content/
 FBXAnim=../../../../../../Users/Chase/Desktop/C++ Tutorials/Project2/Content/
