--- a/Content/Project_03/Project_03_2D/Config/DefaultEditor.ini
+++ b/Content/Project_03/Project_03_2D/Config/DefaultEditor.ini
@@ -15,3 +15,5 @@ SnapAxis=Y
 +SnapLayers=(Name="Foreground",Depth=500.000000)
 +SnapLayers=(Name="Background",Depth=200.000000)
 
+[/Script/AdvancedPreviewScene.SharedProfiles]
+
